# target-tier-docs-experiment

./: 404.html  Cargo.toml  README.md  aarch64-apple-darwin.html  aarch64-apple-ios-macabi.html  aarch64-apple-ios-sim.html  aarch64-apple-ios.html  aarch64-apple-tvos-sim.html  aarch64-apple-tvos.html  aarch64-apple-watchos-sim.html  aarch64-fuchsia.html  aarch64-kmc-solid_asp3.html  aarch64-linux-android.html  aarch64-nintendo-switch-freestanding.html  aarch64-pc-windows-gnullvm.html  aarch64-pc-windows-msvc.html  aarch64-unknown-freebsd.html  aarch64-unknown-fuchsia.html  aarch64-unknown-hermit.html  aarch64-unknown-linux-gnu.html  aarch64-unknown-linux-gnu_ilp32.html  aarch64-unknown-linux-musl.html  aarch64-unknown-linux-ohos.html  aarch64-unknown-netbsd.html  aarch64-unknown-none-softfloat.html  aarch64-unknown-none.html  aarch64-unknown-nto-qnx710.html  aarch64-unknown-openbsd.html  aarch64-unknown-redox.html  aarch64-unknown-teeos.html  aarch64-unknown-uefi.html  aarch64-uwp-windows-msvc.html  aarch64-wrs-vxworks.html  aarch64_be-unknown-linux-gnu.html  aarch64_be-unknown-linux-gnu_ilp32.html  aarch64_be-unknown-netbsd.html  arm-linux-androideabi.html  arm-unknown-linux-gnueabi.html  arm-unknown-linux-gnueabihf.html  arm-unknown-linux-musleabi.html  (+193 more)
.github/workflows/: deploy.yml
src/: main.rs  parse.rs  render.rs
src/parse/: tests.rs
target_info/: *-apple-tvos.md  powerpc64-ibm-aix.md
targets/: .gitignore  book.toml
