[package]
name = "target-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
glob-match = "0.2.1"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
